--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,108 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "56cd4475",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Athar\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import nltk\n",
-    "nltk.download(\"punkt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "ac1cb373",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "np.zeros(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "22f6f0c2",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.stem.porter import PorterStemmer\n",
-    "stemmer=PorterStemmer()"
+    "import Helper\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "0eeb0792",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nlp_tokenize(sentence):\n",
-    "    return nltk.word_tokenize(sentence.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "e149be5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nlp_stemming(word):\n",
-    "    return stemmer.stem(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "6c702086",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bag_of_words(tokenize_word_list,all_word_list):\n",
-    "        all_words_arr=np.zeros(len(all_word_list))\n",
-    "        for word in tokenize_word_list:\n",
-    "            word_pos=all_word_list.index(word)\n",
-    "            all_words_arr[word_pos]=1\n",
-    "        return all_words_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "id": "9ea397c6",
    "metadata": {},
    "outputs": [
@@ -113,36 +23,38 @@
        "6"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a=\"Organize Organizes Organizer is good gooder\"\n",
-    "result=nlp_tokenize(a)\n",
+    "result=Helper.nlp_tokenize(a)\n",
     "len(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "9ff5804f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['organ', 'organ', 'organ', 'is', 'good', 'gooder']"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'stemmer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mHelper\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnlp_stemming\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mF:\\Workspace\\SourceCodes\\AI_Chatbot\\Helper.py:8\u001b[0m, in \u001b[0;36mnlp_stemming\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnlp_tokenize\u001b[39m(sentence):\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m nltk\u001b[38;5;241m.\u001b[39mword_tokenize(sentence\u001b[38;5;241m.\u001b[39mlower())\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnlp_stemming\u001b[39m(word):\n\u001b[0;32m      9\u001b[0m     stemmer\u001b[38;5;241m=\u001b[39mPorterStemmer()\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m stemmer\u001b[38;5;241m.\u001b[39mstem(word)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'stemmer' is not defined"
+     ]
     }
    ],
    "source": [
-    "nlp_stemming(result)"
+    "Helper.nlp_stemming(result)"
    ]
   },
   {
